Spacing fix
Micro space fixing.

--- a/newIDE/app/src/UI/CompactToggleButtons/CompactToggleButtons.module.css
+++ b/newIDE/app/src/UI/CompactToggleButtons/CompactToggleButtons.module.css
@@ -43,7 +43,7 @@
   background-color: var(--theme-text-field-disabled-color);
   align-self: stretch;
   width: 1px;
-  margin: 0 1px;
+  margin: 0;
 }
 
 /* svg tag is needed to be first priority compared to Material UI Custom SVG icon classes*/
